--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
       <button id="btnGetData" type="button">加载包数据(<span id="requestStatus"></span>)</button>
       <br>
       <button id="btnDbInit" type="button">初始化数据库</button>
-      <button id="btnDbDel" type="button" class="red">删除数据库</button>
+      <!-- <button id="btnDbDel" type="button" class="red">删除数据库</button> -->
     </div>
 
     <div>
