--- a/index.html
+++ b/index.html
@@ -33,16 +33,17 @@
         <tbody id="countIDB"></tbody>
       </table><br>
       <b>每条数据大小:</b>
-      <input id="itemSize" type="number" value="0">MB 
+      <spsn id="itemSize">……</spsn>MB 
     </p>
   
     <div>
       <button id="btnAddBag" type="button">添加数据包</button>
+      <p>TODO: 还需要一个充值包状态的流程，切新包的时候</p>
       <button id="btnClearDB" type="button" class="red">清除当前包数据</button>
       <br>
       <button id="btnGetData" type="button">加载包数据(<span id="requestStatus"></span>)</button>
       <br>
-      <button id="btnDbInit" type="button">初始化数据库</button>
+      <button id="btnDbInit" type="button">清空数据库</button>
       <!-- <button id="btnDbDel" type="button" class="red">删除数据库</button> -->
     </div>
 
